@@ -84,6 +84,7 @@ if (!file_exists($lbHelpFile)) $lbHelpFile = "modules/lightbox/languages/help_te
 //include_once('modules/lightbox/functions/lb_call_js.php');
 
 // Find if indi and family associated media exists and then count them ( $tot_med_ct)
+global $tot_med_ct;
 include_once ('includes/media_reorder_count.php');
 
 	// If in re-order mode do not show header links, but instead, show drag and drop title.
